fix mobile css making app too tall

--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -1,6 +1,23 @@
 @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import "./assets/fontawesome-free-5.15.4-web/scss/solid.scss";
 /* You can add global styles to this file, and also import other style files */
+html {
+  overflow: hidden;
+  height: 100vh;
+  height: -webkit-fill-available;
+  max-height: 100vh;
+  max-height: -webkit-fill-available;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+
+  width: 100vh;
+  width: -webkit-fill-available;
+  max-width: 100vw;
+  max-width: -webkit-fill-available;
+  min-width: 100vw;
+  min-width: -webkit-fill-available;
+}
+
 body,
 app-root {
   font-family: Arial, Helvetica, sans-serif;
@@ -9,7 +26,18 @@ app-root {
   align-items: stretch;
   overflow: hidden;
   height: 100vh;
-  // max-height: 100vh;
+  height: -webkit-fill-available;
+  max-height: 100vh;
+  max-height: -webkit-fill-available;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+
+  width: 100vh;
+  width: -webkit-fill-available;
+  max-width: 100vw;
+  max-width: -webkit-fill-available;
+  min-width: 100vw;
+  min-width: -webkit-fill-available;
 }
 body > app-root {
   overflow-y: auto;
